--- a/Developpement/templates/clarinette/clarinette_historique.html
+++ b/Developpement/templates/clarinette/clarinette_historique.html
@@ -5,16 +5,12 @@
     <h1 class="titre-gpartie">Présentation de la clarinette</h1>
     <div class="well">
       <img class="presentation-img-titre img-thumbnail img-rounded" src="{{ url_for('static',filename='img/clarinette.jpg') }}" alt="">
-      <div class="presentation-text">
+      <div class="presentation-text-titre">
         <p>La clarinette est un instrument de musique à vent de la famille des bois caractérisée par son anche simple et sa perce quasi cylindrique.
-          <br>Elle a été créée vers 1690 par Johann Christoph Denner (1655-1707) à Nuremberg sur la base d'un instrument à anche simple plus ancien : le « chalumeau ». La clarinette soprano est le modèle le plus commun.
-          <br>La perce cylindrique de la clarinette la distingue du hautbois et du saxophone, tous deux à perce conique, et lui confère une aptitude au quintoiement.
-          <br>Son timbre chaud dans le registre grave, peut s'avérer extrêmement brillant voire perçant dans l'aigu.
-          <br>De tous les instruments à vent de sa famille, la clarinette possède la plus grande tessiture avec trois octaves plus une sixte mineure, soit 45 notes en tout.
-          <br>Elle se décline en une famille d'instruments presque tous transpositeurs, depuis la clarinette contrebasse jusqu'à la clarinette sopranino, couvrant ainsi toute l'étendue d'un orchestre symphonique.
-          <br>A l'exception des percussions, la clarinette est l'instrument qui possède la plus grande famille.
-          <br>Cet instrument est utilisé dans la musique classique et traditionnelle ainsi qu'en jazz et en musique contemporaine.
-          <br>Parmi les compositions célèbres pour clarinette, on peut citer le Concerto pour clarinette de Mozart. </p>
+          Elle a été créée vers 1690 par Johann Christoph Denner (1655-1707) à Nuremberg sur la base d'un instrument à anche simple plus ancien : le « chalumeau ». La clarinette soprano est le modèle le plus commun.
+          La perce cylindrique de la clarinette la distingue du hautbois et du saxophone, tous deux à perce conique, et lui confère une aptitude au quintoiement.
+          Son timbre chaud dans le registre grave, peut s'avérer extrêmement brillant voire perçant dans l'aigu.
+          De tous les instruments à vent de sa famille, la clarinette possède la plus grande tessiture avec trois octaves plus une sixte mineure, soit 45 notes en tout.</p>
       </div>
     </div>
     <h1 class="titre-gpartie">Historique de la clarinette</h1>
