--- a/Developpement/templates/stage/stage_recettes.html
+++ b/Developpement/templates/stage/stage_recettes.html
@@ -41,7 +41,7 @@ function plats(){
     document.getElementById("sel").style.display= "";
   }
   else{
-    document.getElementById("entree").style.display= "none";
+    document.getElementById("entree").style.display= "";
     document.getElementById("plat").style.display= "none";
     document.getElementById("dessert").style.display= "none";
     document.getElementById("sucre").style.display= "none";
@@ -104,13 +104,13 @@ function m(){
       <div class="row">
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="Velouté Potiron Carotte">
+            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
             <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
           </div>
         </div>
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-          <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="Soupe Chou Vert">
+          <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
           <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
         </div>
         </div>
@@ -118,13 +118,13 @@ function m(){
         <div class="row">
             <div class="col-sm-6 col-sm-6">
               <div class="texte">
-              <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree3.jpg') }}" alt="Flan de Courgettes">
+              <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
               <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
             </div>
             </div>
             <div class="col-sm-6 col-sm-6">
               <div class="texte">
-              <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree4.jpg') }}" alt="Terrine de poisson au basilic">
+              <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
               <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
             </div>
           </div>
@@ -140,13 +140,13 @@ function m(){
       <div class="row">
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="Velouté Potiron Carotte">
+            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
             <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
           </div>
         </div>
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-          <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="Soupe Chou Vert">
+          <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
           <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
         </div>
         </div>
@@ -154,13 +154,13 @@ function m(){
         <div class="row">
             <div class="col-sm-6 col-sm-6">
               <div class="texte">
-              <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree3.jpg') }}" alt="Flan de Courgettes">
+              <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
               <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
             </div>
             </div>
             <div class="col-sm-6 col-sm-6">
               <div class="texte">
-              <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree4.jpg') }}" alt="Terrine de poisson au basilic">
+              <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
               <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
             </div>
           </div>
@@ -176,13 +176,13 @@ function m(){
       <div class="row">
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="Velouté Potiron Carotte">
+            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
             <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
           </div>
         </div>
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-          <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="Soupe Chou Vert">
+          <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
           <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
         </div>
         </div>
@@ -190,13 +190,13 @@ function m(){
         <div class="row">
           <div class="col-sm-6 col-sm-6">
             <div class="texte">
-            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree3.jpg') }}" alt="Flan de Courgettes">
+            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
             <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
           </div>
           </div>
           <div class="col-sm-6 col-sm-6">
             <div class="texte">
-            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree4.jpg') }}" alt="Terrine de poisson au basilic">
+            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
             <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
           </div>
         </div>
@@ -212,13 +212,13 @@ function m(){
       <div class="row">
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="Velouté Potiron Carotte">
+            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
             <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
           </div>
         </div>
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-          <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="Soupe Chou Vert">
+          <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
           <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
         </div>
         </div>
@@ -226,13 +226,13 @@ function m(){
         <div class="row">
           <div class="col-sm-6 col-sm-6">
             <div class="texte">
-            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree3.jpg') }}" alt="Flan de Courgettes">
+            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
             <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
           </div>
           </div>
           <div class="col-sm-6 col-sm-6">
             <div class="texte">
-            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree4.jpg') }}" alt="Terrine de poisson au basilic">
+            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
             <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
           </div>
         </div>
@@ -248,13 +248,13 @@ function m(){
       <div class="row">
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="Velouté Potiron Carotte">
+            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
             <h3>Vélouté de Potiron et de Carottes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
           </div>
         </div>
         <div class="col-sm-6 col-sm-6">
           <div class="texte">
-          <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="Soupe Chou Vert">
+          <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
           <h3>Soupe aux Chou Vert <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
         </div>
         </div>
@@ -262,13 +262,13 @@ function m(){
         <div class="row">
           <div class="col-sm-6 col-sm-6">
             <div class="texte">
-            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree3.jpg') }}" alt="Flan de Courgettes">
+            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
             <h3>Flan de Courgettes <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
           </div>
           </div>
           <div class="col-sm-6 col-sm-6">
             <div class="texte">
-            <img class="img-thumbnail" src="{{ url_for('static',filename='img/entree4.jpg') }}" alt="Terrine de poisson au basilic">
+            <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
             <h3>Terrine de poisson au basilic <a download="fichetechnique.pdf" href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" ><small><span class="glyphicon glyphicon-save"></span></small></a></h3>
           </div>
         </div>
