--- a/Developpement/static/styles/css/administration/administration_gestionFichiers.css
+++ b/Developpement/static/styles/css/administration/administration_gestionFichiers.css
@@ -3,9 +3,11 @@
   margin-bottom: 2%;
 }
 
-.underline2{
+.underline3{
   margin-left: 37%;
-  margin-top: -2%;
+  /* margin-top: -2%; */
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .types{
@@ -14,4 +16,10 @@
 
 .types p{
   margin-left: 3%;
+}
+h1{
+  text-align: center;
+}
+.hliens{
+  
 }
