--- a/Developpement/static/styles/css/clarinette/clarinette_historique.css
+++ b/Developpement/static/styles/css/clarinette/clarinette_historique.css
@@ -1,18 +1,6 @@
-/* .titre-gpartie{
-  text-align: center;
-  margin-bottom: 10%;
-} */
-
-/* .presentation-img{
-  height: 20%;
-  width: 20%;
-  border-radius: 5%;
-  margin-right: 2.5%;
-  margin-left: 2.5%;
-} */
 .well{
-  background-color: lightgrey;
-  border-color: lightgrey;
+  background-color: #fbfcef;
+  border-color: #fbfcef;
   border-radius: 30px;
   width: 90%;
   margin-left: 5%;
@@ -21,6 +9,7 @@
 }
 h1{
   text-align: center;
+  margin-bottom: 2%;
 }
 
 .presentation-text{
@@ -29,16 +18,23 @@ h1{
   padding-right: 3%;
 }
 .presentation-img-titre{
-  margin-top: 10%;
-  margin-bottom: 10%;
+  width: 200%;
+  height: 200%;
 }
 .presentation-img{
-  max-width: 20%;
-  max-height: 20%;
-  min-width: 20%;
-  min-height: 20%;
+  width: 70%;
+  height: 70%;
 }
-/* .presentation-text{
-  font-family: Verdana,sans-serif;
-  font-size: 15px;
-}   */
+.presentation-text-titre{
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
+.quatuor-clarinette{
+  margin-bottom: 5%;
+  margin-top: 3%;
+}
+
+.img-thumbnail{
+  background: white;
+}
