--- a/Developpement/templates/administration/administration_gestionFichiers_articles.html
+++ b/Developpement/templates/administration/administration_gestionFichiers_articles.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/css/administration/administration_gestionVideos.css')}}">
 <div class="liens">
   <h1 id="hliens">Gestion des articles</h1>
-  <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
+  <img class="underline" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
 </div>
 <div class="stagiaire-all">
   <div class="stagiaire-annee">
