--- a/Developpement/templates/administration/administration_gestionFichiers_images.html
+++ b/Developpement/templates/administration/administration_gestionFichiers_images.html
@@ -2,8 +2,8 @@
 {% block fichier %}
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/css/administration/administration_gestionFichiers_images.css')}}">
 <div class="liens">
-  <h1 id="hliens">Gestion des Images</h1>
-  <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
+  <h1 id="hliens">Gestion des images</h1>
+  <img class="underline3" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
 </div>
 <div class="">
       <table class="table">
@@ -17,7 +17,7 @@
         </thead>
         <tbody>
           <tr>
-            <td><img src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline"></td>
+            <td><img class="image" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline"></td>
             <td>underline3</td>
             <td>.png</td>
             <td><span class="btn btn-default fileinput-button">
@@ -27,7 +27,7 @@
             <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></button></td>
           </tr>
           <tr>
-            <td><img src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="entree1"></td>
+            <td><img class="image" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="entree1"></td>
             <td>entree1</td>
             <td>.jpg</td>
             <td><span class="btn btn-default fileinput-button">
@@ -37,7 +37,7 @@
             <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></button></td>
           </tr>
           <tr>
-            <td><img src="{{ url_for('static',filename='img/Olivier-Roussillat.png') }}" alt="Olivier-Roussillat"></td>
+            <td><img class="image" src="{{ url_for('static',filename='img/Olivier-Roussillat.png') }}" alt="Olivier-Roussillat"></td>
             <td>Olivier-Roussillat</td>
             <td>.png</td>
             <td><span class="btn btn-default fileinput-button">
@@ -49,7 +49,7 @@
         </tbody>
       </table>
       <div id="end">
-        <p>Ajouter une image :</p>
+        <p class="texte">Ajouter une image :</p>
         <span id="plus" class="btn btn-info fileinput-button">
             <i class="glyphicon glyphicon-plus"></i>
             <input id="fileupload" type="file" name="files[]" multiple="">
