--- a/Developpement/templates/stage/stage_presentation.html
+++ b/Developpement/templates/stage/stage_presentation.html
@@ -75,16 +75,15 @@
                   <th>Adresse</th>
                 </tr>
               </thead>
-              {% for stage in listStages %}
               <tbody>
+                {% for stage in dico_stage %}
                 <tr>
                   <td><a href="/stage/{{stage.intituleSt}}/">{{stage.intituleSt}}</a></td>
-                  <td>{{stage.datedeb}}</td>
-                  <td>{{stage.datefin}}</td>
-                  <td>{{stage.lieuSt}}</td>
+                  <td>{{stage.dateDebSt}} - {{stage.dateFinSt}}</td>
+                  <td>{{stage.descSt}}</td>
                 </tr>
+                {% endfor %}
               </tbody>
-              {% endfor %}
             </table>
         </div>
     </div>
