--- a/Developpement/templates/administration/administration_mailing.html
+++ b/Developpement/templates/administration/administration_mailing.html
@@ -62,10 +62,11 @@
 
   <div class="form-group">
     <label for="contenuMessage" class="col-sm-3 control-label">{{admin_contactForm.contenuMessage.label}}</label>
-    <div class="col-sm-3">{{ admin_contactForm.contenuMessage(size=50, class="form-control", placeholder="Contenu du mail")}}</div>
+    <div class="col-sm-3">{{ admin_contactForm.contenuMessage(size=100, class="form-control textarea", placeholder="Contenu du mail")}}</div>
   </div>
   <br>
-  <div class="form-group">
+  <br>
+  <div class="form-group grand">
     <label for="pjMessage" class="col-sm-3 control-label">{{admin_contactForm.pjMessage.label}}</label>
     <div class="col-sm-3">{{ admin_contactForm.pjMessage(size=50, class="form-control")}}</div>
   </div>
