--- a/Developpement/templates/stage/stage_presse_all.html
+++ b/Developpement/templates/stage/stage_presse_all.html
@@ -1,20 +1,33 @@
-{% extends "stage/stage_presse_actu.html" %}
+{% extends "quatuor/quatuor_presse_actu.html" %}
+<h1>Presse du quatuor</h1>
 {% block presse %}
-<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/stage/stage_presse_all.css')}}">
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/quatuor/quatuor_presse_all.css')}}">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 <div class="container  liste-article">
   <br>
   {% for i in range(liste|length) %}
-  <div class="presse-titre {% if i%2==0 %}presse-paire{% else %} presse-impaire {% endif %}">
-    <h3>{{liste[i][0]}}</h3>
+  <div class="presse-titre">
+    {% if i%2==0 %}
+    <a href="{{'/quatuor/presse/article/'+liste[i][0]}}"><h3>{{liste[i][0]}}</h3></a>
     <div class="presse-vignette">
       <div id="blocImage">
-        <img class= "img-rounded" src="{{ url_for('static',filename='img/'+liste[i][3]+'.png')}}" alt="Image de {{liste[i][0]}}">
-        <p class="paragraphe">Posté par {{liste[i][2]}} le {{liste[i][1]}}</p>
-        <p class="paragraphe">{{ liste[i][4]}}</p>
+        <img src="{{ url_for('static',filename='img/'+liste[i][3]+'.png')}}" alt="Image de {{liste[i][0]}}">
+         <p>Posté par {{liste[i][2]}} le {{liste[i][1]}}</p>
+      </div>
+      <p id = "parag-long">{{ liste[i][4]}}</p>
+    </div>
+    {% else %}
+    <a href="{{'/quatuor/presse/article/'+liste[i][0]}}"><h3>{{liste[i][0]}}</h3></a>
+    <div class="presse-vignette">
+      <p id = "parag-long">{{ liste[i][4]}}</p>
+      <div id="blocImage">
+        <img src="{{ url_for('static',filename='img/'+liste[i][3]+'.png')}}" alt="Image de {{liste[i][0]}}">
+        <p>Posté par {{liste[i][2]}} le {{liste[i][1]}}</p>
       </div>
     </div>
+    {% endif %}
   </div>
 
 
@@ -26,17 +39,17 @@
 <div class="center">
   <ul class="pagination">
     {% for i in range(gliste|length+2) %}
-    <li {% if i==id %} class="active" {% endif %}><a href="/stage/presse/all/{{ i }}">{{i}}</a></li>
+    <li {% if i==id %} class="active" {% endif %}><a href="/quatuor/presse/all/{{ i }}">{{i}}</a></li>
     {% endfor %}
   </ul>
   <ul class="pager">
     {% if id!=0 %}
-    <li class="previous"> <a href="/stage/presse/all/{{ id-1 }}" class="previous">Précédent</a> </li>
+    <li class="previous"> <a href="/quatuor/presse/all/{{ id-1 }}" class="previous">Précédent</a> </li>
     {% endif %}
   </ul>
   <ul class="pager">
     {% if id!=gliste|length+1 %}
-    <li class="next"><a href="/stage/presse/all/{{ id+1 }}" class="next">Suivant</a> </li>
+    <li class="next"><a href="/quatuor/presse/all/{{ id+1 }}" class="next">Suivant</a> </li>
     {% endif %}
   </ul>
 
