--- a/Developpement/templates/stage/stage_programmes.html
+++ b/Developpement/templates/stage/stage_programmes.html
@@ -7,19 +7,25 @@
     <h3 id="h3title">Niveau 1</h3>
     <img class="underline" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
 </div>
+<div class="contain-p-down">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ut vulputate purus. Nam dapibus eros nisl, nec faucibus orci rutrum at. Pellentesque placerat ante arcu, quis luctus leo tincidunt sed. Nunc malesuada ligula ac magna pharetra, eget imperdiet elit tempus. Phasellus vitae fermentum ex. Donec pharetra massa vitae augue bibendum, in feugiat odio fringilla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Phasellus ac ex nec ipsum cursus varius sit amet vel nisi. Curabitur pellentesque sapien ut magna convallis, vel ultricies elit convallis. Quisque aliquet vulputate ultricies. </p>
-<a id="download" href="#">Télécharger ce programme</a>
+<a id="download" href="#"><span class="glyphicon glyphicon-download-alt"></span></a>
+</div>
 <div class='first-subtitle'>
     <h3 id="h3title">Niveau 2</h3>
     <img class="underline" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
 </div>
+<div class="contain-p-down">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ut vulputate purus. Nam dapibus eros nisl, nec faucibus orci rutrum at. Pellentesque placerat ante arcu, quis luctus leo tincidunt sed. Nunc malesuada ligula ac magna pharetra, eget imperdiet elit tempus. Phasellus vitae fermentum ex. Donec pharetra massa vitae augue bibendum, in feugiat odio fringilla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Phasellus ac ex nec ipsum cursus varius sit amet vel nisi. Curabitur pellentesque sapien ut magna convallis, vel ultricies elit convallis. Quisque aliquet vulputate ultricies.</p>
-<a id="download" href="#">Télécharger ce programme</a>
+<a id="download" href="#"><span class="glyphicon glyphicon-download-alt"></span></a>
+</div>
 <div class='first-subtitle'>
     <h3 id="h3title">Niveau 3</h3>
     <img class="underline" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
 </div>
+<div class="contain-p-down">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ut vulputate purus. Nam dapibus eros nisl, nec faucibus orci rutrum at. Pellentesque placerat ante arcu, quis luctus leo tincidunt sed. Nunc malesuada ligula ac magna pharetra, eget imperdiet elit tempus. Phasellus vitae fermentum ex. Donec pharetra massa vitae augue bibendum, in feugiat odio fringilla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Phasellus ac ex nec ipsum cursus varius sit amet vel nisi. Curabitur pellentesque sapien ut magna convallis, vel ultricies elit convallis. Quisque aliquet vulputate ultricies.</p>
-<a id="download" href="#">Télécharger ce programme</a>
+<a id="download" href="#"><span class="glyphicon glyphicon-download-alt"></span></a>
+</div>
 </div>
 {% endblock %}
