--- a/Developpement/static/styles/css/base.css
+++ b/Developpement/static/styles/css/base.css
@@ -27,8 +27,8 @@ h1{
   margin-bottom: 4%;
   border-style: solid;
   border-width: thin;
-  margin-left: 25%;
-  width: 50%;
+  margin-left: 20%;
+  width: 60%;
 }
 
 body{
@@ -37,6 +37,7 @@ body{
   background-size:cover;
   background-attachment: fixed;
   font-family: "aaa";
+  margin-bottom: 2%;
 }
 
 .navbar-brand {
