--- a/Developpement/static/styles/css/stage/stage_presse_all.css
+++ b/Developpement/static/styles/css/stage/stage_presse_all.css
@@ -1,54 +1,60 @@
 .presse-titre{
-    margin-top: 1%;
-  }
-  .presse-vignette{
-    display: flex;
-  }
-  #blocImage p {
-      width: 100%;
-      margin : auto;
-      z-index: 200;
-  }
-  #blocImage {
-      width : 100%;
-  }
-  #blocImage img{
-    width: 20em;
-    height: 10em;
-    border-radius: 2%;
-  }
-  .liste-article{
-    margin-top: 5%
-  }
-  .presse-impaire{
-    background-color: rgba(175, 175, 175, 0.73);
-    border-radius: 1.5%;
-  }
-  .presse-impaire h3{
-    text-align: right;
-  }
-  .presse-paire{
-    background-color: rgba(175, 175, 175, 0.52);
-    border-radius: 1.5%;
-  }
-  .presse-impaire img{
-    float: right;
-  }
-  .presse-paire img{
-    float: left;
-  }
-  .center{
-    text-align: center;
-  }
-   
-h3{
-  padding:4%;
-} 
-.paragraphe{
-  text-align: justify;
-  padding: 1%;
+  margin-top: 1%;
 }
-img{
-  margin:1%;
-  padding: 1%;
+.presse-vignette{
+  display: flex;
+}
+#blocImage p {
+    width: 100%;
+    margin : auto;
+    z-index: 200;
+}
+#blocImage {
+    width : 100%;
+}
+#blocImage img{
+  width: 20em;
+  height: 10em;
+  border-radius: 2%;
+}
+.liste-article{
+  margin-top: 5%
+}
+.presse-titre{
+  background-color: #fafdef;
+  text-align: center;
+  border-style: solid;
+  margin-top: -1.5%;
+  margin-bottom: 5%;
+  width: 97%;
+}
+
+.presse-titre a{
+  color: black;
+}
+#parag-long{
+  margin-top: 2.5%;
+}
+.center{
+  text-align: center;
+}
+
+.pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover {
+    z-index: 3;
+    color: #fff;
+    cursor: default;
+    background-color: black;
+    border-color: black;
+}
+.pagination li a{
+  color: black
+}
+
+.next a, .previous a{
+  color: black;
+}
+
+h3{
+  font-weight: bold;
+  text-align: center;
 }
