--- a/Developpement/templates/stage/stage_presse.html
+++ b/Developpement/templates/stage/stage_presse.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block main %}
-<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/stage/stage_presse.css')}}">
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/quatuor/stage_presse.css')}}">
 <!--
 <h1>{{ article[0] }}</h1>
 <p>Redige par {{ article[2] }} le {{ article[1] }}</p>
@@ -9,18 +9,18 @@
   <p>{{ article[4] }} </p>
 </div> -->
 
-<div class="article"style="">
+<div class="article">
 
-    <div class="article-titre"style="">
-       <h1>{{ article[0] }}</h1>
-
-    </div>
-    <div class="article-image" style="">
-       <img src="{{ url_for('static',filename='img/'+article[3]+'.png') }}">
-    </div>
-    <div class="article-text">
-      <p>{{ article[4] }} </p>
-    </div>
-     <p>Redige par {{ article[2] }} le {{ article[1] }}</p>
- </div>
+   <div class="article-titre">
+      <h1>{{ article[0] }}</h1>
+ <div class="contain-img-text">
+   <div class="article-image">
+      <img src="{{ url_for('static',filename='img/'+article[3]+'.png') }}">
+   </div>
+   <div class="article-text">
+     <p>{{ article[4] }} </p>
+   </div>
+    <p id="redige">Rédigé par {{ article[2] }} le {{ article[1] }}</p>
+  </div>
+</div>
 {% endblock %}
